--- a/portainer/docker-compose.yaml
+++ b/portainer/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   portainer:
-    image: portainer/portainer-ce:2.20.3  # 使用 Portainer 社區版
+    #image: portainer/portainer-ce:2.20.3  # 使用 Portainer 社區版
+    image: portainer/portainer-ce:latest
     container_name: portainer
     restart: always
     ports:
