--- a/docker-data/portainer/compose/2/docker-compose.yml
+++ b/docker-data/portainer/compose/2/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "3000:80"
     volumes:
-      - /workspace/tomwu-gitpod-basic-environment/docker-data/nginx/static:/usr/share/nginx/html:ro
-      - /workspace/tomwu-gitpod-basic-environment/docker-data/nginx/config/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ${VOLUMES_ROOT}/nginx/static:/usr/share/nginx/html:ro
+      - ${VOLUMES_ROOT}/nginx/config/nginx.conf:/etc/nginx/nginx.conf:ro
     restart: always
     
 networks:
